@@ -10,8 +10,9 @@
 [+] #309 Remplacement de define() par const (bazooka07)
 [+] #312 En présence d'une homepage statique, le lien "archive total" redirige vers le blog (je-evrard, bazooka07, P3ter)
 [+] #312 Remplacement de la fonction str_replace() par strtr() pour les liens vers les pages archives (bazooka07, P3ter)
-FIX #287 Capcha : ajout d'un espace insécable avant le "?"
-FIX #302 Renvoie vers index.php si un paramètre est inconnu dans l'URI  (bazooka07)
+FIX #287 Capcha : ajout d'un espace insécable avant le "?" (P3ter)
+FIX #302 Renvoie vers index.php si un paramètre est inconnu dans l'URI (bazooka07)
+FIX #318 L_NEW_CATEGORY en doublon pour certaines langues (P3ter)
 FIX #322 plxDate::getCalendar() ne retourne jamais L_SUNDAY (jerrywham, P3ter)
 FIX #323 La fonction plxUtils::printSelect ne fonctione pas avec un "selected" de type numérique (Philippe-M)   
 
